add profile image

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 
 <header>
+  <img src="profile.jpg" class="profile-pic">
   <h1>K Anil</h1>
   <p>Full Stack Developer</p>
+
   <p>
     📞 +91 6301095875 |
     📧 ka9751956@gmail.com |
