Fix profile image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <img src="profile.jpg" class="profile-pic">
+  <img src="profile.png" class="profile-pic">
   <h1>K Anil</h1>
   <p>Full Stack Developer</p>
 
