Fix profile image size and shape

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
 <body>
 
-<header>
-  <img src="profile.png" class="profile-pic">
+<header class="header">
+  <div class="profile-wrapper">
+    <img src="profile.png" class="profile-pic">
+  </div>
   <h1>K Anil</h1>
   <p>Full Stack Developer</p>
+
+
 
   <p>
     📞 +91 6301095875 |
