Add modern UI features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 <body>
 
+
+<nav class="navbar">
+  <div class="logo">Anil</div>
+  <div class="nav-links">
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="resume.pdf" target="_blank">Resume</a>
+    <a href="mailto:ka9751956@gmail.com">Contact</a>
+  </div>
+</nav>
+
+
 <header class="hero">
   <img src="profile.png" class="profile-pic">
   <h1>K Anil</h1>
@@ -21,7 +33,7 @@
   </div>
 </header>
 
-<section class="about fade-in">
+<section id="about" class="about fade-in">
   <h2>About Me</h2>
   <p>
     Results-driven Full Stack Developer experienced in building scalable web applications for 10,000+ users.
@@ -29,7 +41,8 @@
   </p>
 </section>
 
-<section class="projects fade-in">
+<section id="projects" class="projects fade-in">
+
   <h2>Projects</h2>
 
   <div class="project-grid">
@@ -60,6 +73,16 @@
     </a>
 
   </div>
+
+  <section class="fade-in">
+<h2>Skills</h2>
+<div class="skill">React <div class="bar"><span style="width:90%"></span></div></div>
+<div class="skill">Node.js <div class="bar"><span style="width:85%"></span></div></div>
+<div class="skill">SQL <div class="bar"><span style="width:80%"></span></div></div>
+<div class="skill">Cloud & DevOps <div class="bar"><span style="width:75%"></span></div></div>
+</section>
+
+
 </section>
 
 <footer>
