--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 <section id="about" class="about fade-in">
   <h2>About Me</h2>
   <p>
-    Results-driven Full Stack Developer experienced in building scalable web applications for 10,000+ users.
-    Skilled in React, Node.js, Django, Cloud & DevOps, focused on performance, clean code and modern UI.
+    Results-driven Full Stack Developer with expertise in building scalable web applications used by 10,000+ users. Proficient in React.js, 
+    Angular, Vue.js (Frontend) and Node.js, Express, Django, Spring Boot (Backend). Strong in RESTful APIs, GraphQL, Microservices, and 
+    database management (MySQL, PostgreSQL, MongoDB, Firebase).
+    Skilled in cloud deployment (AWS, Azure, GCP) and DevOps (Docker, Kubernetes, CI/CD), reducing deployment time by 40%. Passionate 
+    about clean coding, system design, and seamless user experiences, improving system efficiency by 30%. Seeking to drive innovation and 
+    performance in a dynamic team.
   </p>
 </section>
 
