--- a/projects/finance.html
+++ b/projects/finance.html
@@ -11,6 +11,16 @@
 <li>User research with 20+ users</li>
 <li>Responsive and accessible design</li>
 </ul>
+
+<p>Designed a finance management application to help users track expenses, set budgets, and analyze financial data, improving 
+financial planning by 30%.
+Created 10+ wireframes and interactive prototypes using Figma/Adobe XD, ensuring a 50% faster design-to-development process.
+Focused on responsive design and accessibility, making the app 100% mobile-friendly.
+Conducted user research with 20+ participants, leading to a 40% improvement in user engagement. Implemented a modern UI with 
+consistent typography, color schemes, and intuitive navigation, enhancing usability by 35%</p>
+
+
+
 </section>
 </body>
 </html>
