--- a/projects/pg-life.html
+++ b/projects/pg-life.html
@@ -11,6 +11,16 @@
 <li>PHP & MySQL backend</li>
 <li>Wishlist, reviews, filters</li>
 </ul>
+<p>Developed a responsive web application for students to search for 1,000+ PG accommodations and hostels based on location, budget, 
+and amenities, increasing search efficiency by 40%.
+Built the frontend using HTML, CSS, Bootstrap, JavaScript, and React, ensuring a 100% mobile-friendly UI with a 30% faster loading 
+time.
+Developed the backend using PHP, handling secure user authentication, hostel listings, and booking functionalities, reducing manual 
+effort by 60%.
+Used phpMyAdmin and MySQL to manage 10,000+ user profiles, hostel details, and reviews efficiently.
+Implemented advanced search filters, user reviews, and a wishlist feature, leading to a 35% increase in user engagement.
+Deployed the project for live access and testing, ensuring 99.9% uptime for seamless user experience</p>
+
 <a class="btn" href="https://github.com/Anil9703" target="_blank">GitHub</a>
 </section>
 </body>
